Minor updates for backwards compatibility